syntax-tree: add type-check script

--- a/packages/syntax-tree/package.json
+++ b/packages/syntax-tree/package.json
@@ -2,7 +2,9 @@
   "name": "@xstate/syntax-tree",
   "version": "0.0.0",
   "main": "dist/xstate-syntax-tree.cjs.js",
-  "scripts": {},
+  "scripts": {
+    "type-check": "tsc --noEmit"
+  },
   "dependencies": {},
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
